# ss_demo

./: .gitignore  get_embeddings.py  main.ipynb  main.py  pyproject.toml  vector_calcs.py  wiki_funcs.py
test/: test.py
