[tool.poetry]
name = "ss"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
transformers=4.44.0


python = "^3.12"
fastapi = "^0.111.1"
numpy = "1.26.4"
scikit-learn = "^1.5.1"
[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
